[workspace]
members = ["core", "download"]

[package]
name = "ymcl"
version = "0.0.0"
description = "A high-performance, cross-platform Minecraft Client Launcher"
authors = ["LingyunAwA"]
edition = "2021"

# Normal
[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Dev
[build-dependencies]
tauri-build = { version = "1", features = [] }

# Dependencies Config
[features]
custom-protocol = ["tauri/custom-protocol"]
